[tool.poetry]
name = "langchain-aws-batch"
version = "0.0.1"
description = "AWS Bedrock batch inference implementation for langchain"
authors = ["Gleb <gleberof@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-aws = "^0.2.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
ruff = "^0.8.1"
isort = "^5.13.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
